cabal-version:       >=1.10

name:                GHUT

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.1

-- A short (one-line) description of the package.
synopsis:            A simple testing library for Haskell.

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            henrywandover.com

-- A URL where users can report bugs.
-- bug-reports:

license:             BSD3
license-file:        LICENSE
author:              Henry Wandover
maintainer:          henrywandover@gmail.com

-- A copyright notice.
-- copyright:

category:            Testing

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  CHANGELOG.md, README.md


library
  -- Modules exported by the library.
  exposed-modules:     GHUT

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.13 && <4.14

  -- Directories containing source files.
  -- hs-source-dirs:

  -- Base language which the package is written in.
  default-language:    Haskell2010

